--- a/WebApplication/Web.config
+++ b/WebApplication/Web.config
@@ -15,7 +15,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
 	<!--Mail Ayarı-->
 	<add key="MailUser" value="ieeeytuiletisim@yandex.com" />
-	<add key="MailPassword" value="luayenjlaregqjdz" />
+	<add key="MailPassword" value="secret" />
   </appSettings>
   <system.web>
 	  <customErrors mode="On">
